--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     compile 'com.android.support:design:23.1.1'
     compile 'com.google.code.gson:gson:2.2.+'
     compile 'com.android.support:cardview-v7:23.+'
+    compile 'com.loopj.android:android-async-http:1.4.9'
 
     // Square stuff
     compile 'com.squareup.retrofit:retrofit:2.0.0-beta2'
